kyverno-policies/custom-3.1.1.yaml
../policies/kubernetes/worker-nodes/custom-3.1.1.yaml
