tests/custom-3.1.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.1.1-compliant
policies:
  - ../../../kyverno-policies/custom-3.1.1.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-1-1-kubeconfig-permissions
    rule: check-kubeconfig-permissions
    resources:
      - compliant-node
    kind: Node
    result: pass
